--- a/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Inference in Environmental Psychology},
+  pdftitle={An Introduction to Causal Inference in Environmental Psychology},
   pdfkeywords={DAGS, Causal
 Inference, Confounding, Environmental, Psychology, Panel},
   colorlinks=true,
@@ -198,7 +198,7 @@ Inference, Confounding, Environmental, Psychology, Panel},
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Inference in Environmental Psychology}
+\title{An Introduction to Causal Inference in Environmental Psychology}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -637,43 +637,37 @@ conditions for them.
 
 \subsubsection{Summary}\label{summary}
 
-In environmental psychology, understanding causal effects requires
-careful consideration of counterfactual comparisons---the unobserved
-potential outcomes. Even in experiments, we face the fundamental problem
-of causal inference: we cannot observe both potential outcomes for the
-same individual. Experiments address this through randomization, aiming
-to balance confounders across treatment groups.
+Causal modelling fundamentally differs from traditional statistical
+modelling. Although statistical models aim to describe associations
+within observed data, they often do not distinguish between correlation
+and causation, leading to potentially misleading conclusions when
+inferring causal relationships. Causal inference requires statistical
+inference; however, statistics comes near the end of a workflow that
+begins by stating a causal quantity with reference to contrasts that
+would be obtained if we had the full data for the population of interest
+treated at different levels of the intervention
+(\citeproc{ref-ogburn2021}{Ogburn and Shpitser 2021}). We then seek to
+understand how these contrasts may be estimated from the data we have.
 
-We rely on three basic assumptions:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  \textbf{Conditional exchangeability}: no unmeasured confounders.
-\item
-  \textbf{Causal consistency}: treatments are well-defined and
-  consistently applied.
-\item
-  \textbf{Positivity}: all individuals have a non-zero probability of
-  receiving each treatment.
-\end{enumerate}
-
-In observational studies, these assumptions are harder to satisfy than
-in randomised controlled experiments. Confounding variables may bias our
-estimates, treatments may vary in ways we can't control, and some
-individuals may never be able to receive certain treatments.
-Understanding and addressing these challenges is crucial for making
-valid causal inferences from data.
-
-In the remainder of this chapter, we will focus on the ``no unmeasured
-confounder'' assumption, using causal directed acyclic graphs to
-demonstrate how common practices in statistical modelling, such as
-regression adjustment and structural equation modelling, fail to address
-this assumption, and indeed may make matters worse by introducing bias
-through inappropriate adjustment for colliders or mediators, distorting
-causal pathways, and potentially masking true relationships or creating
-spurious associations that do not represent causal effects.
+Common practices in statistical modelling, such as regression adjustment
+and structural equation modelling, frequently fall short in estimating
+causal effects because they do not account for the causal structure
+between variables. Including all available covariates in a regression
+model without understanding their causal roles can introduce bias. In
+the next section, we introduce causal directed acyclic graphs (causal
+DAGs), which are intuitive graphical tools that allow us to inspect
+graphs to evaluate the complex conditional dependencies that must be
+understood to evaluate the ``no unmeasured confounders'' assumption.
+Causal DAGs also demonstrate how common practices in statistical
+modelling such as over-adjustment in regression and mediation analysis
+in structural equation modelling may inadvertently introduce bias
+through inappropriate adjustment for variables. Such over-adjustment can
+distort causal pathways, potentially mask true relationships, or leading
+to associations that do not represent causal effects. In causal
+inference, such associations are aptly called ``spurious.' By making the
+causal structure explicit and carefully considering which variables to
+adjust for, causal DAGs may help environmental psycholosts to better
+estimate causal effects in environmental psychology.
 
 \subsection{Part 2: An Introduction to Causal
 Diagrams}\label{section-part2}
@@ -2098,6 +2092,11 @@ Morgan, SL, and Winship, C (2014) \emph{Counterfactuals and causal
 inference: Methods and principles for social research}, 2nd edn,
 Cambridge: Cambridge University Press.
 doi:\href{https://doi.org/10.1017/CBO9781107587991}{10.1017/CBO9781107587991}.
+
+\bibitem[\citeproctext]{ref-ogburn2021}
+Ogburn, EL, and Shpitser, I (2021) Causal modelling: The two cultures.
+\emph{Observational Studies}, \textbf{7}(1), 179--183.
+doi:\href{https://doi.org/10.1353/obs.2021.0006}{10.1353/obs.2021.0006}.
 
 \bibitem[\citeproctext]{ref-pearl1995}
 Pearl, J (1995) Causal diagrams for empirical research.
